# rustlet

./: .gitignore  CLAUDE.md  Cargo.toml  PIXLET_COMPATIBILITY_TODO.md  README.md
.github/workflows/: ci.yml
crates/rustlet-cli/: Cargo.toml  build.rs
crates/rustlet-cli/src/: api.rs  config.rs  main.rs  util.rs
crates/rustlet-cli/src/commands/: api.rs  check.rs  completion.rs  config_cmd.rs  create.rs  delete.rs  devices.rs  list.rs  login.rs  mod.rs  profile.rs  push.rs
crates/rustlet-cli/src/commands/community/: list_color_filters.rs  list_fonts.rs  list_icons.rs  load_app.rs  mod.rs  validate_icons.rs  validate_manifest.rs
crates/rustlet-cli/src/commands/serve/: handlers.rs  mod.rs  state.rs  templates.rs  watcher.rs
crates/rustlet-cli/templates/: main.star.tmpl  manifest.yaml.tmpl
crates/rustlet-compat/: Cargo.toml
crates/rustlet-compat/compat_cases/: cases.json
crates/rustlet-compat/compat_cases/fixtures/: box_text.star  double_text.star  image_gif.star  image_png.star  row_column.star  text_missing_glyph.star  text_offset.star  text_tomthumb_wrap.star  wrapped_text.star
crates/rustlet-compat/compat_cases/fixtures/double_text_app/: manifest.yaml
crates/rustlet-compat/src/: lib.rs
crates/rustlet-compat/tests/: compat.rs
crates/rustlet-encode/: Cargo.toml
crates/rustlet-encode/src/: filter.rs  lib.rs
crates/rustlet-render/: Cargo.toml
crates/rustlet-render/assets/emoji/: index.tsv
crates/rustlet-render/src/: color.rs  lib.rs
crates/rustlet-render/src/fonts/: mod.rs
crates/rustlet-render/src/render/: animation.rs  arc.rs  box_widget.rs  circle.rs  column.rs  emoji.rs  emoji_atlas.rs  ft_raster.rs  image_widget.rs  line.rs  marquee.rs  mod.rs  padding.rs  pie_chart.rs  plot.rs  polygon.rs  root.rs  row.rs  sequence.rs  stack.rs  starfield.rs  text.rs  text_layout.rs  vector.rs  wrapped_text.rs
crates/rustlet-render/src/render/anim/: curve.rs  direction.rs  keyframe.rs  mod.rs  positioned.rs  transform.rs  transformation.rs
crates/rustlet-render/src/render/filter/: blur.rs  color_ops.rs  convolution.rs  mod.rs  transform.rs
crates/rustlet-runtime/: Cargo.toml
crates/rustlet-runtime/src/: animation_module.rs  applet.rs  assert_module.rs  base64_module.rs  bsoup_module.rs  cache_module.rs  color_module.rs  csv_module.rs  execution_context.rs  filter_module.rs  gzip_module.rs  hash_module.rs  hmac_module.rs  html_module.rs  http_module.rs  humanize_module.rs  i18n_module.rs  io_limit.rs  json_module.rs  lib.rs  manifest.rs  math_module.rs  module_loader.rs  qrcode_module.rs  random_module.rs  re_module.rs  render_module.rs  schema_module.rs  secret_module.rs  starlark_bytes.rs  starlark_canvas.rs  starlark_color.rs  starlark_config.rs  starlark_duration.rs  starlark_file.rs  starlark_response.rs  starlark_time.rs  starlark_widgets.rs  strings_module.rs  sunrise_module.rs  (+4 more)
examples/: hello_world.star
plans/: 001-fix-clippy-ci-gate.md  002-cap-decompression-size.md  003-bound-http-cache.md  004-magnify-overflow.md  005-device-client-tests.md  006-pre-1970-timestamps.md  007-api-error-sanitization.md  008-format-workspace.md  009-device-client-error-body.md  README.md
