[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rustlet-render = { path = "crates/rustlet-render" }
rustlet-runtime = { path = "crates/rustlet-runtime" }
rustlet-encode = { path = "crates/rustlet-encode" }
anyhow = "1"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
base64 = "0.22"
sha2 = "0.10"
clap = { version = "4" }
tempfile = "3"
