[package]
name = "rustlet-cli"
version.workspace = true
edition.workspace = true

[dependencies]
rustlet-render.workspace = true
rustlet-runtime.workspace = true
rustlet-encode = { workspace = true, features = ["clap"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ureq = { version = "3.3.0", features = ["json"] }
base64.workspace = true
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["multipart"] }
notify = "8"
notify-debouncer-full = "0.5"
futures-util = "0.3"
open = "5"
dialoguer = "0.11"
clap_complete = "4"
humantime = "2"

[dev-dependencies]
tempfile.workspace = true
