[package]
name = "rustlet-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp"] }
rustlet-encode = { path = "../rustlet-encode" }
rustlet-runtime = { path = "../rustlet-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tiny-skia = "0.11"
