[package]
name = "rustlet-compat"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
image = { workspace = true, features = ["png", "gif", "webp"] }
rustlet-encode.workspace = true
rustlet-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tiny-skia.workspace = true
