[package]
name = "rustlet-encode"
version = "0.1.0"
edition = "2021"

[features]
clap = ["dep:clap"]

[dependencies]
gif = "0.13"
webp-animation = "0.9"
image = { version = "0.25", default-features = false, features = ["gif"] }
tiny-skia = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
