[package]
name = "rustlet-encode"
version.workspace = true
edition.workspace = true

[features]
clap = ["dep:clap"]

[dependencies]
gif = "0.13"
webp-animation = "0.9"
image = { workspace = true, features = ["gif"] }
tiny-skia.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
