[package]
name = "rustlet-render"
version.workspace = true
edition.workspace = true

[dependencies]
tiny-skia.workspace = true
resvg = "0.45"
image = { workspace = true, features = ["png", "jpeg", "gif"] }
imageproc = { version = "0.25", default-features = false }
color-name = "1"
anyhow.workspace = true
unicode-bidi = "0.3"
unicode-segmentation = "1"

[dev-dependencies]
insta = "1"
