[package]
name = "rustlet-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rustlet-render = { path = "../rustlet-render" }
starlark = "0.13"
starlark_derive = "0.13"
allocative = "0.3"
derive_more = "1"
anyhow = "1"
base64 = "0.22"
serde_json = "1"
tiny-skia = "0.11"
ureq = "3.3.0"
dupe = "0.9.1"
iana-time-zone = "0.1.65"
jiff = "0.2.23"
