[package]
name = "rustlet-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rustlet-render = { path = "../rustlet-render" }
starlark = "0.13"
starlark_derive = "0.13"
allocative = "0.3"
derive_more = "1"
anyhow = "1"
base64 = "0.22"
getrandom = "0.3"
serde_json = "1"
tiny-skia = "0.11"
ureq = "3.3.0"
dupe = "0.9.1"
iana-time-zone = "0.1.65"
jiff = "0.2.23"
regex = "1"
roxmltree = "0.20"
flate2 = "1"
chrono = "0.4.43"
hmac = "0.12.1"
md-5 = "0.10.6"
qrcode = "0.14.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
sunrise = "3.0.0"
tink-core = { version = "0.3.0", features = ["json"] }
tink-hybrid = "0.3.0"
csv = "1.4.0"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3"
